sec:Ergebnisse - Hypo 1 und 4 überarbeitet für Lektorat (inkl. Abbildungen im Anhang)

--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -121,7 +121,7 @@ Die Skalenauswertung des Adult Attachment Scale (\acrshort{aas}) lieferte folgen
 \label{table:AASDeskriptivTrans}
 \end{table}
 
-Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in sicher und unsicher gebundene Personen vorgenommen. Wie bereits in Kapitel \titleref{sec:AAS} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7\% der Probanden in sicher und 30.3\% in unsicher gebundene Personen zuordnen. 
+Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in sicher und unsicher gebundene Personen vorgenommen. Wie bereits in Kapitel \titleref{sec:AAS} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7\% ($N$=144) der Probanden in sicher und 30.3\% ($N$=60) in unsicher gebundene Personen zuordnen. 
 
 \subsubsection{Stress anhand PSQ}
 Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert folgende Werte (siehe \textit{Tabelle \ref{table:PSQDeskriptiv}}). Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$=17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$=21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$=19.08). Der Mittelwert $M$ der Skala $PSQ_{Anforderung}$ beträgt 46.97 ($SD$=19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$=17.11).
@@ -150,14 +150,14 @@ Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert
 Der Indexwert der Subjective Happiness Scale (\acrshort{shs}) $SHS~I$ beläuft sich in dieser Stichprobe auf $M$ 5.53 ($SD$=1.01) (siehe \textit{Tabelle \ref{table:SHSDeskriptiv}}).
 
 %Table
-\begin{table}[hb]
+\begin{table}[ht]
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
   \hline
   $SHS~I$ & 5.53 & 1.01 & 2.25 - 7.0 & -.77 \\
   \hline
-  \multicolumn{5}{l}{\textit{Anmerkung.} $N$=218}\\
+  \multicolumn{5}{l}{\textit{Anmerkung.} $N$=218, Skala Wertebereich 1 bis 7}\\
   &&&&\\
 \end{tabular}
 \caption{Skalenwerte des Subjective Happiness Scale - SHS}
@@ -166,14 +166,29 @@ Der Indexwert der Subjective Happiness Scale (\acrshort{shs}) $SHS~I$ beläuft s
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
-Für die Überprüfung der Hypothese 1 mittels einfaktoriellen Varianzanalyse fiel die Prüfung der Abhängigen Variable Mediennutzuung, die in zwei Faktorstufen sicher und unsicher gebunden aufgeteilt wurde, mittels Shapiro-Wilks-Test \cite{Shapiro1965} signifikant aus (Shapiro-Wilks-Test; $p_{sicher}$ = .000, $p_{unsicher}$ = .00). Der Sichvergleich mittels Histogramm und Q-Q-Plots zeigten ein ähnliches Bild. Somit kann von einer Abweichung von der Normalverteilung ausgegangen werden \cite{Hemmerich2018} und eine Voraussetzung der einfaktoriellen Varianzanalyse ist verletzt. Gemäss \citeA{UniversitatZurich2018} sind Verletzungen ab einer Gruppe von 25 Probanden in der Regel unproblematisch. Da sich die Gruppe sichererer Probanden aus $N$=144 und die Gruppe unsicher Probanden aus $N$=60 zusammensetzten, wurde die Berechnung weiter geführt. Zudem wurde geprüft, dass die Varianzhomogenitätsannahme nicht verletzt wurde (Levene-Test; $p$ = .683). Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher hat keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
+In diesem Kapitel werden die Hypothesen eins bis vier der Reihe nach überprüft. Die für die Prüfung der Voraussetzung der einzelnen Berechnungsvarianten notwendigen Grafiken (z.B. Histogramme und Q-Q-Plots) wurden aus Platzgründen in den Anhang verschoben (siehe Anhang \ref{app:Hypothesentest_1}).
 
+\subsubsection{Hypothesentest 1}\label{sec:Hypothesentest1}
+Für die Überprüfung der Hypothese 1 wurde eine einfaktoriellen Varianzanalyse berechnet, um zu untersuchen, ob es einen Unterschied in der Mediennutzung abhängig zur Bindung gab. Die Bindung wurde in zwei Gruppen unterteilt: Gruppe sicher Gebundene ($N$=144, $M$=199.09, $SD$=179.017) und unsicher Gebundene ($N$=60, $M$=209.316, $SD$=165.701). Die Prüfung auf Normalveteilung mittels Shapiro-Wilks-Test \cite{Shapiro1965} viel signifikant aus (Shapiro-Wilks-Test $p_{sicher}$ = .000, $p_{unsicher}$ = .000 bei $\alpha$ = .05). Der Sichtvergleich mittels Histogramm und Q-Q-Plots zeigten ein ähnliches Bild (siehe Anhang \ref{app:Hypothesentest_1}). Somit kann von einer Abweichung von der Normalverteilung ausgegangen werden \cite{Hemmerich2018} und eine Voraussetzung der einfaktoriellen Varianzanalyse ist verletzt. Gemäss \citeA{UniversitatZurich2018} sind Verletzungen ab einer Gruppe von 25 Probanden in der Regel unproblematisch. Da sich die Gruppe sichererer Probanden aus $N$=144 und die Gruppe unsicher Probanden aus $N$=60 zusammensetzten, wurde die Berechnung weiter geführt.
 
+Gemäss Boxplot wurden zudem Ausreisser im Datensatz festgestellt (siehe Anhang \ref{app:Hypothesentest_1}). Für die Gruppe unsicher Gebundenen kann ein Fall mit der Id 38 identifiziert werden, der 1.5 Standardabweichungen vom Mittelwert entfernt ist. Bei der Gruppe sicher Gebunden waren es sieben Fälle (12, 30, 39, 48, 115, 165, 205). Die Varianzanalyse ist gegenüber Ausreissern nur bedingt robust \cite{Hemmerich2018}. Das es sich in diesem Fall um leichte Ausreisser handelte, wurden sie im Datensatz belassen und die Berechnung mit ihnen weitergeführt.  
+
+Die Überprüfung der Varianzhomogenität erfolgte mit dem Levene-Test, gemäß dem wir eine Gleichheit der Varianzen annehmen können (Levene-Test; $p$ = .683). 
+
+Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Ergebnis. Die Bindung von sicher und unsicher gab keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
+
+\subsubsection{Hypothesentest 2}
 Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .389, $p$=.533). Die Nullhypothese $H2_{0}$ muss angenommen werden.
 
+\subsubsection{Hypothesentest 3}
 Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe (F(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
 
-Bei der Prüfung der Voraussetzungen für die einfaktorielle Varianzanalyse für den Test der Hypothese 4, wurde wie bei Hypothese 1 eine Abweichung von der Normalverteilung der abähngigen Variable Mediennutzung festgestellt (Shapiro-Wilks-Test; $p_{sicher}$ = .000, $p_{unsicher}$ = .00). Da es sich um die selben Variablen handelt wie bei Hypothese 1, mit Zugabe der Kovariate Stress, wurde das Modell unter Begründung der Gruppengrösse weiter gerechnet. Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden haben keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(2,201) = .203, $p$=.817, partielles $\eta^2$=.002, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
+\subsubsection{Hypothesentest 4}
+Für die Überprüfung der Hypothese 4 wurde eine einfaktoriellen Varianzanalyse berechnet, um zu untersuchen, ob es einen Unterschied in der Mediennutzung abhängig zur Bindung und dem Stress gab. WIe in Hypothes 1 wurde die Bindung in zwei Gruppen unterteilt: Gruppe sicher Gebundene ($N$=144, $M$=199.09, $SD$=179.017) und unsicher Gebundene ($N$=60, $M$=209.316, $SD$=165.701). Da sich die Hypothesen 1 und vier in der Berechnung ähnlich sind, wurde bei der Prüfung der Voraussetzungen für die einfaktorielle Varianzanalyse ähnlich Probleme festgestellt (siehe dazu Abschnitt \nameref{sec:Hypothesentest1}). Da es sich um die selben Variablen handelt wie bei Hypothese 1, mit Zugabe der Kovariate Stress, wurde das Modell unter Begründung der Gruppengrösse weiter gerechnet. 
+
+Die Überprüfung der Varianzhomogenität erfolgte mit dem Levene-Test, gemäß dem wir eine Gleichheit der Varianzen annehmen können (Levene-Test; $p$ = .708). 
+
+Der Hypothesentest für Hypothese 4 mittels ANOVA liefert ein nicht-signifikantes Ergebnis. Die Bindung von sicher und unsicher zusammen mit dem Stressempfinden ergaben keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(2,201) = .206, $p$=.814, partielles $\eta^2$=.002, $N$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H4_{0}$ angenommen werden. 
 
 % ---------------------------------------
 \subsection{TBD: Zusätzliche Analysen} \label{sec:ZusätzlicheAnalysen}
