--- a/main.tex
+++ b/main.tex
@@ -128,6 +128,11 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \input{content/Anhang/TabellenPSQ.tex}
 \newpage
 
+% Abbildungen für Hypothesentest
+\section{Hilfsdiagramme und Abbildungen für die Hypothesentests}\label{app:Hypothesentest_1}
+\input{content/Anhang/Hypothesentest_1.tex}
+\newpage
+
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
 \input{content/Anhang/AAS.tex}
