--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -238,11 +238,14 @@ Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univari
 
 Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet. Für die Voraussetzungen der einfaktoriellen Varianzanalyse soll die Homogenität der Varianzen mittels Levene-Test geprüft werden. Für die Voraussetzungen der einfachen linearen Regressionsanalyse soll die Linearität des Zusammenhangs, der bedingte Erwartungswert (Gauss-Markov-Annahme 3) und die Homoskedastiziät (Gauss-Markov-Annahme 5) visuell mittels Streudiagramm geprüft werden \cite{UniversitatZurich2018}.
 
-Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse, engl. ANOVA (Analysis of Variance). Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher). Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H1_{0}$ lautet: Die Bindung hat keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H1_{1}$: Die Bindung hat einen signifikanten Einfluss auf die Mediennutzung.
+Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse, engl. ANOVA (Analysis of Variance). Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher). Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H1_{0}$ (\ref{eq:Hypothese_1_Null}) lautet: Die Bindung hat keinen signifikanten Einfluss auf die Mediennutzung, somit existiert kein Unterschied zwischen den Mittelwerten der einzelnen Gruppen \enquote{sicher} und \enquote{unsicher} und es besteht kein Effekt. Die Alternativhypothese $H1_{1}$ (\ref{eq:Hypothese_1_Alt})  lautet: Die Bindung hat einen signifikanten Einfluss auf die Mediennutzung, somit unterscheiden sich die beiden Gruppen voneinander.
 
 %Formel Hypothesen
-\begin{equation}\label{eq:Hypothese_1}
-    (H1_{0}:p>.000)~(H1_{1}:p=.000 ~ AND ~ f>=.25)
+\begin{equation}\label{eq:Hypothese_1_Null}
+    H1_{0} = \mu_1 = \mu_2
+\end{equation}
+\begin{equation}\label{eq:Hypothese_1_Alt}
+    H1_{1}:p=.000 ~ AND ~ f>=.25~ (\sigma_1 = \sigma_2)
 \end{equation}
 
 Die Beantwortung der Hypothese 2 erfolgt mittels einfacher linearen Regression. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.25$ erwartet. Das Signifikanzniveau soll $\alpha=0.05$ und die Teststärke $1-\beta=0.95$ betragen. Es soll die Regression von der Mediennutzung auf das Stressemfpinden der Eltern berechnet werden. Die Nullhypothese $H2_{0}$ lautet: Das Stressemfpinden der Eltern korreliert nicht  mit der Mediennutzung der Eltern. Die Alternativhypothese $H2_{1}$ lautet: Das Stressempfinden der Eltern korreliert mit der Mediennutzung der Eltern.
@@ -259,9 +262,12 @@ Die Beantwortung der Hypothese 3 erfolgt analog zu Hypothese 2 mittels einfacher
     (H3_{0}:p>.000)~(H3_{1}:p=.000 ~ AND ~ f>=.25)
 \end{equation}
 
-Für die Beantwortung der Hypothese 4 wird eine einfaktorielle Varianzanlyse verwendet. Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher) dar und das Stressempfinden fliesst als Kovariate in die Berechung ein. Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H4_{0}$ lautet: Die Bindung und das Stressempfinden haben keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H4_{1}$: Die Bindung und das Stressempfinden haben einen signifikanten Einfluss auf die Mediennutzung.
+Für die Beantwortung der Hypothese 4 wird eine einfaktorielle Varianzanlyse verwendet. Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher) dar und das Stressempfinden fliesst als Kovariate in die Berechung ein. Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H4_{0}$ (\ref{eq:Hypothese_4_Null}) lautet: Die Bindung und das Stressempfinden haben keinen signifikanten Einfluss auf die Mediennutzung, somit existiert kein Unterschied zwischen Mittelwertn der beiden Gruppen \enquote{sicher} und \enquote{unsicher} und es besteht kein Effekt. Die Alternativhypothese $H4_{1}$ (\ref{eq:Hypothese_4_Alt}) lautet: Die Bindung und das Stressempfinden haben einen signifikanten Einfluss auf die Mediennutzung, somit unterscheiden sich die beiden Gruppen voneinander.
 
 %Formel Hypothesen
-\begin{equation}\label{eq:Hypothese_4}
-    (H4_{0}:p>.000)~(H4_{1}:p=.000 ~ AND ~ f>=.25)
+\begin{equation}\label{eq:Hypothese_4_Null}
+    H4_{0} = \mu_1 = \mu_2
+\end{equation}
+\begin{equation}\label{eq:Hypothese_4_Alt}
+    H4_{1}:p=.000 ~ AND ~ f>=.25~ (\sigma_1 = \sigma_2)
 \end{equation}
