sec:Ereignisse Hypo 2und 3 in Progress

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -248,18 +248,25 @@ Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse,
     H1_{1}:p=.000 ~ AND ~ f>=.25~ (\sigma_1 = \sigma_2)
 \end{equation}
 
-Die Beantwortung der Hypothese 2 erfolgt mittels einfacher linearen Regression. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.25$ erwartet. Das Signifikanzniveau soll $\alpha=0.05$ und die Teststärke $1-\beta=0.95$ betragen. Es soll die Regression von der Mediennutzung auf das Stressemfpinden der Eltern berechnet werden. Die Nullhypothese $H2_{0}$ lautet: Das Stressemfpinden der Eltern korreliert nicht  mit der Mediennutzung der Eltern. Die Alternativhypothese $H2_{1}$ lautet: Das Stressempfinden der Eltern korreliert mit der Mediennutzung der Eltern.
+Die Beantwortung der Hypothese 2 erfolgt mittels einfacher linearen Regression. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $f=.25$ erwartet. Das Signifikanzniveau soll $\alpha=0.05$ und die Teststärke $1-\beta=0.95$ betragen. Es soll die Regression von der Mediennutzung auf das Stressemfpinden der Eltern berechnet werden. Die Nullhypothese $H2_{0}$ (\ref{eq:Hypothese_2_Null}) lautet: Das Stressemfpinden der Eltern korreliert nicht  mit der Mediennutzung der Eltern, somit sind die Regressionskoeffizienten = 0. Die Alternativhypothese $H2_{1}$ (\ref{eq:Hypothese_2_Alt}) lautet: Das Stressempfinden der Eltern korreliert mit der Mediennutzung der Eltern, dabei wird mindestens ein Regressionskoeffizient $\neq$ 0.
 
 %Formel Hypothesen
-\begin{equation}\label{eq:Hypothese_2}
-    (H2_{0}:p>.000)~(H2_{1}:p=.000 ~ AND ~ f>=.25)
+\begin{equation}\label{eq:Hypothese_2_Null}
+    H2_{0}=\beta_0 = \beta_1 = 0
+\end{equation}
+\begin{equation}\label{eq:Hypothese_2_Alt}
+    H2_{0}=\beta_0 \text{ und/oder } \beta_1 \neq 0
 \end{equation}
 
-Die Beantwortung der Hypothese 3 erfolgt analog zu Hypothese 2 mittels einfacher linearen Regression. Dabei soll die Regression des subjektiven Wohlbefindens auf die Mediennutzung berechnet werden. Die Nullhypothese $H3_{0}$ lautet: Es besteht kein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden. Die Alternativhypothese $H3_{1}$ lautet: Es besteht ein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden.
+Die Beantwortung der Hypothese 3 erfolgt analog zu Hypothese 2 mittels einfacher linearen Regression. Dabei soll die Regression des subjektiven Wohlbefindens auf die Mediennutzung berechnet werden. Die Nullhypothese $H3_{0}$ (\ref{eq:Hypothese_3_Null}) lautet: Es besteht kein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden, somit sind die Regressionskoeffizienten = 0. Die Alternativhypothese $H3_{1}$ (\ref{eq:Hypothese_3_Alt}) lautet: Es besteht ein Zusammenhang zwischen Eltern mit einer geringen Mediennutzung und einem hohen subjektiven Wohlbefinden, dabei wird mindestens ein Regressionskoeffizient $\neq$ 0.
 
 %Formel Hypothesen
-\begin{equation}\label{eq:Hypothese_3}
-    (H3_{0}:p>.000)~(H3_{1}:p=.000 ~ AND ~ f>=.25)
+%Formel Hypothesen
+\begin{equation}\label{eq:Hypothese_3_Null}
+    H3_{0}=\beta_0 = \beta_1 = 0
+\end{equation}
+\begin{equation}\label{eq:Hypothese_3_Alt}
+    H3_{0}=\beta_0 \text{ und/oder } \beta_1 \neq 0
 \end{equation}
 
 Für die Beantwortung der Hypothese 4 wird eine einfaktorielle Varianzanlyse verwendet. Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher) dar und das Stressempfinden fliesst als Kovariate in die Berechung ein. Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H4_{0}$ (\ref{eq:Hypothese_4_Null}) lautet: Die Bindung und das Stressempfinden haben keinen signifikanten Einfluss auf die Mediennutzung, somit existiert kein Unterschied zwischen Mittelwertn der beiden Gruppen \enquote{sicher} und \enquote{unsicher} und es besteht kein Effekt. Die Alternativhypothese $H4_{1}$ (\ref{eq:Hypothese_4_Alt}) lautet: Die Bindung und das Stressempfinden haben einen signifikanten Einfluss auf die Mediennutzung, somit unterscheiden sich die beiden Gruppen voneinander.
