--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -127,7 +127,7 @@ Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung 
 Die Skalenauswertung des Perceived Stress Questionnaire (\acrshort{psq}) liefert folgende Werte (siehe \textit{Tabelle \ref{table:PSQDeskriptiv}}). Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$=17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$=21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$=19.08). Der Mittelwert $M$ der Skala $PSQ_{Anforderung}$ beträgt 46.97 ($SD$=19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$=17.11).
 
 %Table
-\begin{table}[hb]
+\begin{table}[ht]
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -178,9 +178,15 @@ Die Überprüfung der Varianzhomogenität erfolgte mit dem Levene-Test, gemäß 
 Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Ergebnis. Die Bindung von sicher und unsicher gab keinen statistisch signifikanten Unterschied auf die gesamte Mediennutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
 
 \subsubsection{Hypothesentest 2}
+Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression durchgeführt, um zu untersuchen, inwiefern sich die Mediennutzung (Kriterium) durch den Prädiktor Stress vorhersagen lässt.
+
+Für die Prüfung der linearen Beziehung zwischen der abhängigen und der unabhängigen Variable wurde ein Streudiagramm erstellt (siehe \textit{Abbildung \nameref{fig:AppStreudiagrammMedienPsq}} in Anhang \ref{app:Hypothesentest_1}). Darin ist praktisch keine Beziehung zwischen den Variablen zu erkennen.
+
 Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .389, $p$=.533). Die Nullhypothese $H2_{0}$ muss angenommen werden.
 
 \subsubsection{Hypothesentest 3}
+Für die Überprüfung der Hypothese 2 wurde eine einfache lineare Regression durchgeführt, um zu untersuchen, inwiefern sich das subjektive Wohlbefinden (Kriterium) durch den Prädiktor Mediennutzung vorhersagen lässt.
+
 Der Hypothesentest für die Hypothese 3 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Es gibt keinen statistischen Zusammenhang zwischen dem Stressempfinden und dem subjektiven Wohlbefinden der Stichprobe (F(1,202) = 1.837, $p$=.177).  Die Nullhypothese $H3_{0}$ muss angenommen werden.
 
 \subsubsection{Hypothesentest 4}
