--- a/content/Anhang/Hypothesentest_1.tex
+++ b/content/Anhang/Hypothesentest_1.tex
@@ -4,13 +4,13 @@
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Histogramm_TotalMedien_SicherGebunden.jpg}
   \caption{Histogramm Mediennutzung sicher Gebundene}
-  \label{fig:HistogrammSicherGebunden}
+  \label{fig:AppHistogrammSicherGebunden}
 \end{figure}
 \begin{figure}%[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Histogramm_TotalMedien_UnsicherGebunden.jpg}
   \caption{Histogramm Mediennutzung unsicher Gebundene}
-  \label{fig:HistogrammUnsicherGebunden}
+  \label{fig:AppHistogrammUnsicherGebunden}
 \end{figure}
 
 %Q-Q-Plots
@@ -18,13 +18,13 @@
   \centering
      \includegraphics[scale=0.4]{content/Grafik/QQDiagramm_TotalMedien_SicherGebunden.jpg}
   \caption{Q-Q-Diagramm Mediennutzung sicher Gebundene}
-  \label{fig:QQDiagrammSicherGebunden}
+  \label{fig:AppQQDiagrammSicherGebunden}
 \end{figure}
 \begin{figure}%[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/QQDiagramm_TotalMedien_UnsicherGebunden.jpg}
   \caption{Q-Q-Diagramm Mediennutzung unsicher Gebundene}
-  \label{fig:QQDiagrammUnsicherGebunden}
+  \label{fig:AppQQDiagrammUnsicherGebunden}
 \end{figure}
 
 %Boxplot
@@ -32,5 +32,13 @@
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Boxplot_TotalMedien_SicherUnsicherGebunden.jpg}
   \caption{Boxplot Diagramm Mediennutzung unsicher vs. sicher Gebundene}
-  \label{fig:BoxplotDiagrammSicherUnsicherGebunden}
+  \label{fig:AppBoxplotDiagrammSicherUnsicherGebunden}
+\end{figure}
+
+% Streudiagramm
+\begin{figure}%[h]
+  \centering
+     \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_TotalMedien_PSQ.jpg}
+  \caption{Streudiagramm Mediennutzung und Stress (PSQ)}
+  \label{fig:AppStreudiagrammMedienPsq}
 \end{figure}
