--- a/main.tex
+++ b/main.tex
@@ -129,8 +129,32 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \newpage
 
 % Abbildungen für Hypothesentest
-\section{Hilfsdiagramme und Abbildungen für die Hypothesentests}\label{app:Hypothesentest_1}
-\input{content/Anhang/Hypothesentest_1.tex}
+%% Hypo 1
+\section{Histogramme für Hypothese 1}\label{app:Hypo1_Histogramme}
+\input{content/Anhang/Hypo1_Histogramm.tex}
+\newpage
+\section{Q-Q-Digramme für Hypothese 1}\label{app:Hypo1_QQDiagramme}
+\input{content/Anhang/Hypo1_QQDiagramm.tex}
+\newpage
+\section{Boxplot für Hypothese 1}\label{app:Hypo1_Boxplot}
+\input{content/Anhang/Hypo1_Boxplot.tex}
+\newpage
+%% Hypo 2
+\section{Streudiagramme für Hypothese 2}\label{app:Hypo2_Streudiagramm}
+\input{content/Anhang/Hypo2_Streudiagramm.tex}
+\newpage
+\section{Histogramm für Hypothese 2}\label{app:Hypo2_Histogramm}
+\input{content/Anhang/Hypo2_Histrogramm.tex}
+\newpage
+\section{Kurvenanpassung für Hypothese 2}\label{app:Hypo2_Kurvenanpassung}
+\input{content/Anhang/Hypo2_Kurvenanpassung.tex}
+\newpage
+%% Hypo 3
+\section{Streudiagramme für Hypothese 3}\label{app:Hypo3_Streudiagramm}
+\input{content/Anhang/Hypo3_Streudiagramme.tex}
+\newpage
+\section{Histogramm für Hypothese 3}\label{app:Hypo3_Histogramm}
+\input{content/Anhang/Hypo3_Histogramm.tex}
 \newpage
 
 % AAS Fragebogen
